# python_todo_fastapi

./: main.py  pyproject.toml
python_fast_api/models/: models.py
